feat: add dark/light mode toggle functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="theme-toggle">
+            <button id="theme-btn">🌙 Dark Mode</button>
+        </div>
         <h1>자동 로또 번호 생성기</h1>
         <div class="lotto-numbers">
             <span class="number"></span>
