--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
     <div class="container">
-        <div class="theme-toggle">
-            <button id="theme-btn">🌙 Dark Mode</button>
-        </div>
         <h1>자동 로또 번호 생성기</h1>
         <div class="lotto-numbers">
             <span class="number"></span>
@@ -22,6 +19,22 @@
         </div>
         <button id="generate-btn">Generate Numbers</button>
     </div>
+
+    <div class="container contact-container">
+        <h2>제휴 문의</h2>
+        <form action="https://formspree.io/f/xykdlboz" method="POST">
+            <div class="form-group">
+                <label for="email">이메일</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="message">문의 내용</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
+            <button type="submit">보내기</button>
+        </form>
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
