--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="theme-toggle">
+            <button id="theme-btn">Toggle Dark Mode</button>
+        </div>
         <h1>자동 로또 번호 생성기</h1>
         <div class="lotto-numbers">
             <span class="number"></span>
