--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자동 로또 번호 생성기</title>
+    <title>자동 로또 번호 생성기 및 분석</title>
+    <meta name="description" content="독창적인 알고리즘으로 생성된 로또 번호를 받아보고, 과거 당첨 번호 통계와 유용한 정보를 확인하세요.">
     <link rel="stylesheet" href="style.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4784806779494796"
-     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -14,6 +13,7 @@
             <button id="theme-btn">Toggle Dark Mode</button>
         </div>
         <h1>자동 로또 번호 생성기</h1>
+        <p class="subtitle">아래 버튼을 눌러 행운의 번호를 받아보세요.</p>
         <div class="lotto-numbers">
             <span class="number"></span>
             <span class="number"></span>
@@ -22,14 +22,30 @@
             <span class="number"></span>
             <span class="number"></span>
         </div>
-        <button id="generate-btn">Generate Numbers</button>
+        <button id="generate-btn">번호 생성하기</button>
+    </div>
+
+    <div class="container content-section">
+        <h2>로또 6/45 정보</h2>
+        <p>대한민국 동행복권에서 발행하는 로또 6/45는 1부터 45까지의 숫자 중 6개를 선택하여 당첨을 기대하는 복권입니다. 저희 사이트는 단순한 번호 생성을 넘어, 여러분의 즐거운 도전을 응원하기 위한 다양한 정보를 제공합니다.</p>
+        <ul>
+            <li><strong>규칙:</strong> 45개의 숫자 중 6개를 맞춰 1등에 당첨될 수 있으며, 보너스 번호의 일치 여부에 따라 2등이 결정됩니다.</li>
+            <li><strong>역사:</strong> 2002년 '나눔로또'로 시작하여 현재는 '동행복권'에서 운영하고 있으며, 많은 사람들에게 일주일의 희망을 선사하고 있습니다.</li>
+            <li><strong>목표:</strong> 저희는 건전한 복권 문화를 지향합니다. 로또는 확률 게임이며, 과도한 몰입보다는 소소한 즐거움으로 접근하는 것이 중요합니다.</li>
+        </ul>
+    </div>
+
+    <div class="container content-section">
+        <h2>과거 당첨 번호 통계 (예시)</h2>
+        <p>데이터 분석은 로또를 즐기는 또 다른 방법입니다. 다음은 과거 데이터를 기반으로 한 흥미로운 통계 예시이며, 이 섹션에 독창적인 분석 데이터를 추가하여 사이트의 가치를 높일 수 있습니다.</p>
+        <p><em>(예: 가장 많이 나온 숫자 TOP 5, 가장 적게 나온 숫자, 최근 10회차 출현 빈도 등 자신만의 분석 콘텐츠를 여기에 작성하세요.)</em></p>
     </div>
 
     <div class="container contact-container">
-        <h2>제휴 문의</h2>
+        <h2>제휴 및 기타 문의</h2>
         <form action="https://formspree.io/f/xykdlboz" method="POST">
             <div class="form-group">
-                <label for="email">이메일</label>
+                <label for="email">답변받으실 이메일</label>
                 <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group">
@@ -41,19 +57,10 @@
     </div>
 
     <div class="container disqus-container">
-        <h2>댓글</h2>
+        <h2>의견 나누기</h2>
         <div id="disqus_thread"></div>
         <script>
-            /**
-            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-            /*
-            var disqus_config = function () {
-            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-            };
-            */
-            (function() { // DON'T EDIT BELOW THIS LINE
+            (function() { 
             var d = document, s = d.createElement('script');
             s.src = 'https://week1-4.disqus.com/embed.js';
             s.setAttribute('data-timestamp', +new Date());
