Add Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>자동 로또 번호 생성기 및 분석</title>
     <meta name="description" content="독창적인 알고리즘으로 생성된 로또 번호를 받아보고, 과거 당첨 번호 통계와 유용한 정보를 확인하세요.">
     <link rel="stylesheet" href="style.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RNV1VESM6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3RNV1VESM6');
+    </script>
 </head>
 <body>
     <div class="container">
