docs: add AdSense requirements (privacy policy, ads.txt, footer)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>자동 로또 번호 생성기 및 분석</title>
     <meta name="description" content="독창적인 알고리즘으로 생성된 로또 번호를 받아보고, 과거 당첨 번호 통계와 유용한 정보를 확인하세요.">
     <link rel="stylesheet" href="style.css">
+    <!-- Google AdSense Placeholder -->
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-################" crossorigin="anonymous"></script> -->
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RNV1VESM6"></script>
     <script>
@@ -78,6 +80,15 @@
         </script>
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </div>
+
+    <footer class="site-footer">
+        <div class="container">
+            <p>© 2026 로또 생성기. All rights reserved.</p>
+            <nav>
+                <a href="privacy.html">개인정보처리방침</a>
+            </nav>
+        </div>
+    </footer>
 
     <script src="main.js"></script>
 </body>
