Add real lotto stats and analysis page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="ko" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자동 로또 번호 생성기 및 분석</title>
-    <meta name="description" content="독창적인 알고리즘으로 생성된 로또 번호를 받아보고, 과거 당첨 번호 통계와 유용한 정보를 확인하세요.">
+    <title>자동 로또 번호 생성기 및 최근 통계</title>
+    <meta name="description" content="독창적인 번호 생성 로직과 실제 공개 데이터 기반 통계를 제공하는 로또 6/45 도우미 사이트입니다.">
     <link rel="stylesheet" href="style.css">
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4784806779494796" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
 <body>
     <div class="container">
         <div class="theme-toggle">
-            <button id="theme-btn">Toggle Dark Mode</button>
+            <button id="theme-btn">테마 전환</button>
         </div>
         <h1>자동 로또 번호 생성기</h1>
         <p class="subtitle">아래 버튼을 눌러 행운의 번호를 받아보세요.</p>
@@ -34,22 +34,75 @@
             <span class="number"></span>
         </div>
         <button id="generate-btn">번호 생성하기</button>
+        <p class="meta">생성 로직은 중복 없이 1~45 범위의 균등 확률을 기본으로 합니다.</p>
     </div>
 
     <div class="container content-section">
-        <h2>로또 6/45 정보</h2>
-        <p>대한민국 동행복권에서 발행하는 로또 6/45는 1부터 45까지의 숫자 중 6개를 선택하여 당첨을 기대하는 복권입니다. 저희 사이트는 단순한 번호 생성을 넘어, 여러분의 즐거운 도전을 응원하기 위한 다양한 정보를 제공합니다.</p>
+        <h2>최근 20회차 통계 요약</h2>
+        <p>아래 통계는 공개 결과표를 기반으로 최근 20회차(2025-10-11~2026-02-21)를 집계한 실제 데이터입니다.</p>
+        <div class="stats-grid">
+            <div class="stat-card">
+                <div class="label">홀수/짝수</div>
+                <div class="value">64 / 56</div>
+            </div>
+            <div class="stat-card">
+                <div class="label">구간 분포</div>
+                <div class="value">35 · 43 · 42</div>
+            </div>
+            <div class="stat-card">
+                <div class="label">최다 출현</div>
+                <div class="value">27 (7회)</div>
+            </div>
+            <div class="stat-card">
+                <div class="label">최소 출현</div>
+                <div class="value">1회 번호 8개</div>
+            </div>
+        </div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>구분</th>
+                    <th>내용</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>가장 많이 나온 번호 TOP 5</td>
+                    <td>27(7회), 1·16·24·38(각 5회)</td>
+                </tr>
+                <tr>
+                    <td>가장 적게 나온 번호</td>
+                    <td>10, 13, 18, 19, 21, 22, 34, 43 (각 1회)</td>
+                </tr>
+                <tr>
+                    <td>구간 분포</td>
+                    <td>1-15: 35회, 16-30: 43회, 31-45: 42회</td>
+                </tr>
+                <tr>
+                    <td>홀짝 비율</td>
+                    <td>홀수 64회, 짝수 56회</td>
+                </tr>
+            </tbody>
+        </table>
+        <p class="meta">자료: Lottolyzer 공개 결과표 기준 · 업데이트: 2026-02-25</p>
+        <a class="link-btn" href="analysis.html">상세 분석 페이지 보기</a>
+    </div>
+
+    <div class="container content-section">
+        <h2>로또 6/45 기본 정보</h2>
+        <p>대한민국 동행복권에서 발행하는 로또 6/45는 1부터 45까지의 숫자 중 6개를 선택하여 당첨을 기대하는 복권입니다. 저희 사이트는 번호 생성뿐 아니라 실제 통계를 통해 균형 있는 관점을 제공하는 것을 목표로 합니다.</p>
         <ul>
-            <li><strong>규칙:</strong> 45개의 숫자 중 6개를 맞춰 1등에 당첨될 수 있으며, 보너스 번호의 일치 여부에 따라 2등이 결정됩니다.</li>
-            <li><strong>역사:</strong> 2002년 '나눔로또'로 시작하여 현재는 '동행복권'에서 운영하고 있으며, 많은 사람들에게 일주일의 희망을 선사하고 있습니다.</li>
-            <li><strong>목표:</strong> 저희는 건전한 복권 문화를 지향합니다. 로또는 확률 게임이며, 과도한 몰입보다는 소소한 즐거움으로 접근하는 것이 중요합니다.</li>
+            <li><strong>규칙:</strong> 45개 숫자 중 6개를 맞추면 1등, 보너스 번호 일치 여부에 따라 2등이 결정됩니다.</li>
+            <li><strong>알고리즘:</strong> 중복을 제거하고 균등 확률을 기본으로 하며, 특정 번호를 밀어주지 않습니다.</li>
+            <li><strong>중요:</strong> 로또는 확률 게임이며, 본 사이트의 정보는 당첨을 보장하지 않습니다.</li>
         </ul>
     </div>
 
     <div class="container content-section">
-        <h2>과거 당첨 번호 통계 (예시)</h2>
-        <p>데이터 분석은 로또를 즐기는 또 다른 방법입니다. 다음은 과거 데이터를 기반으로 한 흥미로운 통계 예시이며, 이 섹션에 독창적인 분석 데이터를 추가하여 사이트의 가치를 높일 수 있습니다.</p>
-        <p><em>(예: 가장 많이 나온 숫자 TOP 5, 가장 적게 나온 숫자, 최근 10회차 출현 빈도 등 자신만의 분석 콘텐츠를 여기에 작성하세요.)</em></p>
+        <h2>건전한 이용 안내</h2>
+        <div class="callout">
+            <p>복권은 मनोर 목적의 확률 게임입니다. 과도한 지출이나 집착은 개인과 가정에 부담이 될 수 있습니다. 책임 있는 범위 내에서 즐겨 주세요.</p>
+        </div>
     </div>
 
     <div class="container contact-container">
@@ -71,7 +124,7 @@
         <h2>의견 나누기</h2>
         <div id="disqus_thread"></div>
         <script>
-            (function() { 
+            (function() {
             var d = document, s = d.createElement('script');
             s.src = 'https://week1-4.disqus.com/embed.js';
             s.setAttribute('data-timestamp', +new Date());
@@ -85,6 +138,7 @@
         <div class="container">
             <p>© 2026 로또 생성기. All rights reserved.</p>
             <nav>
+                <a href="analysis.html">통계 분석</a>
                 <a href="privacy.html">개인정보처리방침</a>
             </nav>
         </div>
